--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "type": "module",
   "dependencies": {
-    "ollama": "^0.5.1"
+    "dotenv": "^16.4.5",
+    "ollama": "^0.5.1",
+    "openai": "^4.47.1"
   }
 }
